hphp/test/slow/magic-methods/call.php.expectf
Fatal error: Magic `__call` methods are no longer supported in %s/call.php on line 4
